--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -251,7 +251,7 @@ crossorigin=""/>
 
           <p class="license"><i><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a><br />ScenTree project is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</i><br></p>
 
-          <p class="copyright"><sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |</p>
+          <p class="copyright"><sup>©</sup> Copyright 2019 - 2020 |  ScenTree  | All Rights Reserved |</p>
         </div>
 
       </div>
