--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -198,7 +198,7 @@ crossorigin=""/>
         <div class="content">
           <h2 id="heading22"><span lang="fr">24 mai 2020</span><span lang="en">24<sup>th</sup> may 2020</span></h2>
           <p>
-              <a class="interpop"  href="../ingredients/Amyl_Acetate__Acétate d_Amyle.html"><span lang="en">Amyl Acetate (CAS N°: 628-63-7)</span><span lang="fr">Acétate d'Amyle (CAS N°: 628-63-7)</span></a>
+              <a class="interpop"  href="../ingredients/Amyl_Acetate__Acétate_d_Amyle.html"><span lang="en">Amyl Acetate (CAS N°: 628-63-7)</span><span lang="fr">Acétate d'Amyle (CAS N°: 628-63-7)</span></a>
               <br><a class="interpop"  href="../ingredients/Prenyl_Acetate__Acétate_de_Prényle.html"><span lang="en">Prenyl Acetate (CAS N°: 1191-16-8)</span><span lang="fr">Acétate de Prényle (CAS N°: 1191-16-8)</span></a>
               <br><a class="interpop"  href="../ingredients/Andrane®__Andrane®.html"><span lang="en">Andrane<sup>®</sup> (CAS N°: 13567-39-0)</span><span lang="fr">Andrane<sup>®</sup> (CAS N°: 13567-39-0)</span></a>
               <br><a class="interpop"  href="../ingredients/Applelide®__Applelide®.html"><span lang="en">Applelide<sup>®</sup> (CAS N°: 478695-70-4)</span><span lang="fr">Applelide<sup>®</sup> (CAS N°: 478695-70-4)</span></a>
