--- a/html/_/support.html
+++ b/html/_/support.html
@@ -252,6 +252,15 @@ crossorigin=""/>
           </ul>
         </p>
         <p class="mt-3 m-0 p-0 text-center">
+          <span lang="fr"><b><i>Ils parlent de nous : </i></b> </span>
+          <span lang="en"><b><i>They talk about us :</i></b> </span>
+        </p>
+          <ul style="font-size: 0.8em;">
+            <li><a href="https://www.nez-larevue.fr/magazine/entretiens/scentree-tout-le-monde-a-besoin-dune-source-fiable-pour-les-matieres-premieres-de-parfumerie/" target="_blank">Nez-La Revue</li>
+            <li>BAUD Maxime</li>
+            <li>DE VIENNE Damien</li>
+          </ul>
+        <p class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b><i>Développement informatique</i></b> </span>
           <span lang="en"><b><i>Informatics development</i></b> </span>
         </p>
