--- a/html/_/support.html
+++ b/html/_/support.html
@@ -236,7 +236,7 @@ crossorigin=""/>
             <li>LAMBERT Hanna -<span lang="fr" class="profession"> (Apprentie Parfumeur Analyste chez Only Fragrance)</span><span lang="en" class="profession"> (Analyst Perfumer Apprentice at Only Fragrance)</span></li>
             <li>LE FLEM Gabriel -<span lang="fr" class="profession"> (Chargé d'études)</span><span lang="en" class="profession"> (Study leaders)</span></li>
             <li>LEMONNIER Aymeric -<span lang="fr" class="profession"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Perfumer intern at MAELSTROM Parfumeurs)</span></li>
-            <li class="nouveausupporter" >LERIOUX PATRIS Joelle -<span lang="fr" class="profession"> (Parfumeur indépendant. Fondatrice de Le parfumeur français)</span><span lang="en" class="profession"> (Independant Perfumer. Founder of Le Parfumeur Français)</span></li>
+            <li>LERIOUX PATRIS Joelle -<span lang="fr" class="profession"> (Parfumeur indépendant. Fondatrice de Le parfumeur français)</span><span lang="en" class="profession"> (Independant Perfumer. Founder of Le Parfumeur Français)</span></li>
             <li>MORVAN Axel -<span lang="fr" class="profession"> (Parfumeur Analyste)</span><span lang="en" class="profession"> (Analyst Perfumer)</span></li>
             <li>NORMAND Sophie -<span lang="fr" class="profession"> (Rédactrice - Formatrice Parfum)</span><span lang="en" class="profession"> (Writer - Perfume Trainer)</span></li>
             <li>OLCZYK Nicolas -<span lang="fr" class="profession"> (Expert Parfum chez Parfums, Tendances & Inspirations)</span><span lang="en" class="profession"> (Fragrance Expert at Parfums, Tendances & Inspirations)</span></li>
@@ -244,7 +244,7 @@ crossorigin=""/>
             <li>PROIA Stéphane -<span lang="fr" class="profession"> (Evaluateur Junior)</span><span lang="en" class="profession"> (Junior Evaluator)</span></li>
             <li>RAYNAL Sabine - <span lang="fr" class="profession"> (Enseignante à l’ISIPCA)</span><span lang="en" class="profession"> (Teacher at ISIPCA)</span></li>
             <li>REVILLARD Patrice - <span lang="fr" class="profession"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></li>
-            <li class="nouveausupporter">SARICA Jordan - <span lang="fr" class="profession"> (Apprenti Parfumeur chez Accord & Parfum)</span><span lang="en" class="profession"> (Perfumer intern at Accord & Parfum)</span></li>
+            <li>SARICA Jordan - <span lang="fr" class="profession"> (Apprenti Parfumeur chez Accord & Parfum)</span><span lang="en" class="profession"> (Perfumer intern at Accord & Parfum)</span></li>
             <li>TAMEN Jeremy -<span lang="fr" class="profession"> (Formateur expert dans les Fragrances du thé)</span><span lang="en" class="profession"> (Trainer - Tea fragrances expert)</span></li>
             <li>TESSON Olivier -<span lang="fr" class="profession"> (Fondateur d'Olivier Parfumerie (Youtube/Instagram) )</span><span lang="en" class="profession"> (Founder of Olivier Parfumerie (Youtube/Instagram) )</span></li>
             <li>TRANI Christelle -<span lang="fr" class="profession"> (Parfumeur chez IPRA Fragrances)</span><span lang="en" class="profession"> (Perfumer at IPRA Fragrances)</span></li>
@@ -252,8 +252,8 @@ crossorigin=""/>
           </ul>
         </p>
         <p class="mt-3 m-0 p-0 text-center">
-          <span lang="fr"><b><i>Ils parlent de nous : </i></b> </span>
-          <span lang="en"><b><i>They talk about us :</i></b> </span>
+          <span lang="fr"><b><i>Ils parlent de ScenTree : </i></b> </span>
+          <span lang="en"><b><i>They talk about ScenTree :</i></b> </span>
         </p>
           <ul style="font-size: 0.8em;">
             <li><a href="https://www.nez-larevue.fr/magazine/entretiens/scentree-tout-le-monde-a-besoin-dune-source-fiable-pour-les-matieres-premieres-de-parfumerie/" target="_blank">Nez-La Revue</a></li>
