--- a/html/_/support.html
+++ b/html/_/support.html
@@ -256,7 +256,7 @@ crossorigin=""/>
           <span lang="en"><b><i>They talk about ScenTree :</i></b> </span>
         </p>
           <ul style="font-size: 0.8em;">
-            <li><a href="https://www.nez-larevue.fr/magazine/entretiens/scentree-tout-le-monde-a-besoin-dune-source-fiable-pour-les-matieres-premieres-de-parfumerie/" target="_blank">Nez-La Revue</a></li>
+            <li><a class="interpopup" href="https://www.nez-larevue.fr/magazine/entretiens/scentree-tout-le-monde-a-besoin-dune-source-fiable-pour-les-matieres-premieres-de-parfumerie/" target="_blank">Nez-La Revue</a></li>
             <li><a href="https://www.fragrantica.fr/news/Scentree-un-outif-de-classification-d%C3%A9di%C3%A9-aux-mati%C3%A8res-premi%C3%A8res-3224.html" target="_blank">Fragrantica</a></li>
             <li><a href="https://www.perfumerflavorist.com/fragrance/application/multiuse/ScenTree-Launches-English-Interactive-Fragrance-Material-Tool.html" target="_blank">Perfumer & Flavorist</a></li>
             <li><a href="http://espritdeparfum.com/scentree-plateforme-dinformations-sur-les-matieres-premieres/" target="_blank">Sylvaine Delacourte</a></li>
