--- a/html/_/support.html
+++ b/html/_/support.html
@@ -167,8 +167,8 @@ crossorigin=""/>
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
 <p class="mt-3">
-  <span lang="fr"> Le projet <i>ScenTree</i> a été imaginé et conçu par deux étudiants du master MSc de l’ISIPCA, Maxime BAUD et Thomas ESPINASSE. Initialement imaginé afin de réunir et d’harmoniser nos connaissances sur les matières premières, <i>ScenTree</i> s’est rapidement transformé en ce que vous voyez aujourd’hui. Après 2 ans de développement du logiciel et de la base de données, nous sommes fiers de vous présenter notre travail. </span>
-  <span lang="en"> <i>ScenTree</i> was imagined and conceived by two MSc students of the ISIPCA, Maxime BAUD and Thomas ESPINASSE. Initially, the aim was to gather and harmonize our knowledge regarding raw materials. ScenTree quickly became what you see today. After two years of developing the software and the database, we are proud to show our work today. </span>
+  <span lang="fr"> Le projet <i>ScenTree</i> a été imaginé et conçu entre 2017 et 2020. Initialement imaginé afin de réunir et d’harmoniser nos connaissances sur les matières premières, <i>ScenTree</i> s’est rapidement transformé en ce que vous voyez aujourd’hui. Après 2 ans de développement du logiciel et de la base de données, nous sommes fiers de vous présenter notre travail. </span>
+  <span lang="en"> <i>ScenTree</i> was imagined and conceived between 2017 and 2020. Initially, the aim was to gather and harmonize our knowledge regarding raw materials. ScenTree quickly became what you see today. After two years of developing the software and the database, we are proud to show our work today. </span>
 </p>
 <p class="mt-3">
   <span lang="fr"> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </span>
