--- a/html/_/support.html
+++ b/html/_/support.html
@@ -181,8 +181,8 @@ crossorigin=""/>
       <div class="col-6 col-xs-12 entreprise">
         <div class="mt-3 m-0 p-0 text-center">
           <h2 class="text-center" style="font-size: 1em;">
-            <span lang="fr"><b class="bplus"><i>Sociétés partenaires</i></b> </span>
-            <span lang="en"><b class="bplus"><i>Partner companies</i></b> </span>
+            <span lang="fr"><b class="bplus">Sociétés partenaires</b> </span>
+            <span lang="en"><b class="bplus">Partner companies</b> </span>
           </h2>
         </div>
 
