--- a/html/_/support.html
+++ b/html/_/support.html
@@ -221,6 +221,7 @@ crossorigin=""/>
             <li>AMIEL Fanny -<span lang="fr" class="profession"> (Etudiante à l'ESP)</span><span lang="en" class="profession"> (ESP student)</span></li>
             <li>ASTORRI Marc -<span lang="fr" class="profession"> (Ancien Apprenti Parfumeur)</span><span lang="en" class="profession"> (Former Perfumer Apprentice)</span></li>
             <li>BAKOUCHE Stéphanie -<span lang="fr" class="profession"> (Parfumeur indépendante chez SENSABA)</span><span lang="en" class="profession"> (Perfumer Freelance at SENSABA)</span></li>
+            <li class="nouveausupporter">BAUDRY Carine -<span lang="fr" class="profession"> (Expert thé et infusion - Enseignante olfaction/arômes à l'ISIPCA)</span><span lang="en" class="profession"> (Tea and infusion expert - Teacher olfaction/flavours at ISIPCA)</span></li>
             <li>BELLOT Raphaël -<span lang="fr" class="profession"> (Apprenti Chimie Analytique Fine Fragrance)</span><span lang="en" class="profession"> (Apprentice in Fine Fragrance Analytical Chemistry)</span></li>
             <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
             <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
@@ -241,11 +242,12 @@ crossorigin=""/>
             <li>NORMAND Sophie -<span lang="fr" class="profession"> (Rédactrice - Formatrice Parfum)</span><span lang="en" class="profession"> (Writer - Perfume Trainer)</span></li>
             <li>OLCZYK Nicolas -<span lang="fr" class="profession"> (Expert Parfum chez Parfums, Tendances & Inspirations)</span><span lang="en" class="profession"> (Fragrance Expert at Parfums, Tendances & Inspirations)</span></li>
             <li>OROFINO Delphine -<span lang="fr" class="profession"> (Marketing de la Parfumerie et des Cosmétiques)</span><span lang="en" class="profession"> (Marketing of perfumes and cosmetics)</span></li>
+            <li class="nouveausupporter">PILGEUN Kim -<span lang="fr" class="profession"> (Elève au GIP / Evaluation Fine Fragrance chez Symrise)</span><span lang="en" class="profession"> (GIP Grasse / Symrise Paris FF evaluation)</span></li>
             <li>PROIA Stéphane -<span lang="fr" class="profession"> (Evaluateur Junior)</span><span lang="en" class="profession"> (Junior Evaluator)</span></li>
             <li>RAYNAL Sabine - <span lang="fr" class="profession"> (Enseignante à l’ISIPCA)</span><span lang="en" class="profession"> (Teacher at ISIPCA)</span></li>
             <li>REVILLARD Patrice - <span lang="fr" class="profession"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></li>
             <li>SARICA Jordan - <span lang="fr" class="profession"> (Apprenti Parfumeur chez Accord & Parfum)</span><span lang="en" class="profession"> (Perfumer intern at Accord & Parfum)</span></li>
-            <li>TAMEN Jeremy -<span lang="fr" class="profession"> (Formateur expert dans les Fragrances du thé)</span><span lang="en" class="profession"> (Trainer - Tea fragrances expert)</span></li>
+            <li class="nouveausupporter">TAMEN Jeremy -<span lang="fr" class="profession"> (Formateur expert dans les Fragrances du thé)</span><span lang="en" class="profession"> (Trainer - Tea fragrances expert)</span></li>
             <li>TESSON Olivier -<span lang="fr" class="profession"> (Fondateur d'Olivier Parfumerie (Youtube/Instagram) )</span><span lang="en" class="profession"> (Founder of Olivier Parfumerie (Youtube/Instagram) )</span></li>
             <li>TRANI Christelle -<span lang="fr" class="profession"> (Parfumeur chez IPRA Fragrances)</span><span lang="en" class="profession"> (Perfumer at IPRA Fragrances)</span></li>
             <li>VILLEPREUX Céline -<span lang="fr" class="profession"> (Experte Matières Premières – Firmenich)</span><span lang="en" class="profession"> (Raw Materials Expert at Firmenich)</span></li>
