--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -245,7 +245,7 @@ crossorigin=""/>
 			</li>
 			<br>
 			<li>
-				<span lang="fr">[POINT NON TRADUIT EN FR]</span>
+				<span lang="fr">Dans ce nouvel amendement, les catégories précédemment basées sur la toxicité systémique d'un ingrédient ont été renouvelées, cette fois-ci en fonction des expositions combinées. Les catégories précédentes (QRA1) ont été harmonisées avec les nouvelles (QRA2). De plus, de nouvelles limites de concentration ont été testées avec la méthodologie précédente, en utilisant la toxicité systémique. Finalement, la limite d'utilisation définie dans le 49ème amendement correspond à la concentration la plus faible obtenue pour une évaluation, et l'autre.</span>
 				<span lang="en">In the new amendment, categories previously based on an ingredient’s systemic toxicity have been renewed, this time according to combined exposures. Previous categories (QRA1) have been harmonized with the new ones (QRA2). Moreover, new concentration limits have been tested with the previous methodology, using systemic toxicity. Eventually, the limit of use defined in the 49th amendment corresponds to the weakest concentration obtained for one assessment, and the other.</span>
 			</li>
 		</ol>
