--- a/html/_/support.html
+++ b/html/_/support.html
@@ -184,17 +184,18 @@ crossorigin=""/>
           </h2>
         </div>
 
+        <!--
         <div class="mt-3 m-0 p-0 col-12 sponsors">
           <a class="btn offset-1 col-4 logopremium" role="button" href="../supporters/cinquieme_sens.html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
           </a>
-          <!-- Débloquer le deuxième Premium sur la première ligne
+          Débloquer le deuxième Premium sur la première ligne
           <a class="btn offset-2 col-4 logopremium" role="button" href="../supporters/cinquieme_sens.html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
           </a>
-          -->
         </div>
-        <!--Débloquer une ligne de standard
+        -->
+        <!--Débloquer une ligne de standard-->
         <div class="mt-3 m-0 p-0 col-12 sponsors">
           <a class="btn offset-2 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
@@ -202,10 +203,10 @@ crossorigin=""/>
           <a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
           </a>
-          <a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
+          <!--<a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
-          </a>
-        </div>-->
+          </a>-->
+        </div>
       </div>
 
       <div class="col-6 col-xs-12 particulier">
