--- a/html/_/support.html
+++ b/html/_/support.html
@@ -197,11 +197,11 @@ crossorigin=""/>
         -->
         <!--Débloquer une ligne de standard-->
         <div class="mt-3 m-0 p-0 col-12 sponsors">
-          <a class="btn offset-2 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
+          <a class="btn offset-2 col-3 logostandards" role="button" href="../supporters/cinquieme_sens.html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
           </a>
-          <a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
-            <img class="img-fluid boutonclickable" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
+          <a class="btn offset-1 col-3 logostandards" role="button" href="../supporters/ISIPCA.html">
+            <img class="img-fluid boutonclickable" src="../img/sponsors/isipca.png" alt="le logo d'ISIPCA'">
           </a>
           <!--<a class="btn offset-1 col-2 logostandards" role="button" href="../supporters/cinquieme_sens.html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
