--- a/html/supporters/ISIPCA.html
+++ b/html/supporters/ISIPCA.html
@@ -40,7 +40,7 @@ crossorigin=""/>
 
 <div class="modal-header d-block">
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h1 class="text-center  modal-title modal-title1">ISIPCA : From senses to expertise </h1>
+  <h1 class="text-center  modal-title modal-title1"><b>ISIPCA : From senses to expertise </b></h1>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
@@ -50,6 +50,7 @@ crossorigin=""/>
   <p>
     <span lang="fr"> Crée en 1970 par Jean-Jacques Guerlain sous l'acronyme ISIP (Institut Supérieur International du Parfum), cette école située à Versailles, France est aujourd'hui connue sous le nom d'ISIPCA (Institut Supérieur International du Parfum, des Cosmétiques et des Arômes alimentaires). Riche d'une très grande expérience dans la formation, elle est aujourd'hui considérée comme l'école de référence en parfumerie.</span>
     <span lang="en"> </span>
+    <span><b>Website :</b> <a class="interpop" href="www.isipca.fr" target="_blank">www.isipca.fr</a></span>
   </p>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"><p class="text-center"><img class="img-fluid  max-height-200px" src="../img/sponsors/isipca.png" alt="Logo d'ISIPCA"></p></div>
