--- a/html/supporters/ISIPCA.html
+++ b/html/supporters/ISIPCA.html
@@ -48,12 +48,17 @@ crossorigin=""/>
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
   <p>
+    <span>
+    	<b><span lang="fr">Site internet :</span><span lang="en">Website :</span></b>
+    	<a class="interpop" href="www.isipca.fr" target="_blank">www.isipca.fr</a></span>
+    <br>
+    <span><b>Telephone :</b> <a class="interpop" href="www.isipca.fr" target="_blank">www.isipca.fr</a></span>
+  </p>
+  <p>
     <span lang="fr"> Crée en 1970 par Jean-Jacques Guerlain sous l'acronyme ISIP (Institut Supérieur International du Parfum), cette école située à Versailles, France est aujourd'hui connue sous le nom d'ISIPCA (Institut Supérieur International du Parfum, des Cosmétiques et des Arômes alimentaires). Riche d'une très grande expérience dans la formation, elle est aujourd'hui considérée comme l'école de référence en parfumerie.</span>
     <span lang="en"> </span>
   </p>
-  <p>
-    <span><b>Website :</b> <a class="interpop" href="www.isipca.fr" target="_blank">www.isipca.fr</a></span>
-  </p>
+
 </div>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"><p class="text-center"><img class="img-fluid  max-height-200px" src="../img/sponsors/isipca.png" alt="Logo d'ISIPCA"></p></div>
 </div>
