--- a/html/supporters/ISIPCA.html
+++ b/html/supporters/ISIPCA.html
@@ -50,9 +50,12 @@ crossorigin=""/>
   <p>
     <span>
     	<b><span lang="fr">Site internet :</span><span lang="en">Website :</span></b>
-    	<a class="interpop" href="www.isipca.fr" target="_blank">www.isipca.fr</a></span>
+    	<a class="interpop" href="www.isipca.fr" target="_blank">www.isipca.fr</a>
+    </span>
     <br>
-    <span><b>Telephone :</b> <a class="interpop" href="www.isipca.fr" target="_blank">www.isipca.fr</a></span>
+    <span>
+    	<b><span lang="fr">Téléphone :</span><span lang="en">Phone :</span></b> (+33)01 39 23 70 00
+    </span>
   </p>
   <p>
     <span lang="fr"> Crée en 1970 par Jean-Jacques Guerlain sous l'acronyme ISIP (Institut Supérieur International du Parfum), cette école située à Versailles, France est aujourd'hui connue sous le nom d'ISIPCA (Institut Supérieur International du Parfum, des Cosmétiques et des Arômes alimentaires). Riche d'une très grande expérience dans la formation, elle est aujourd'hui considérée comme l'école de référence en parfumerie.</span>
