--- a/html/supporters/ISIPCA.html
+++ b/html/supporters/ISIPCA.html
@@ -58,7 +58,11 @@ crossorigin=""/>
     </span>
   </p>
   <p>
-    <span lang="fr"> Crée en 1970 par Jean-Jacques Guerlain sous l'acronyme ISIP (Institut Supérieur International du Parfum), cette école située à Versailles, France est aujourd'hui connue sous le nom d'ISIPCA (Institut Supérieur International du Parfum, des Cosmétiques et des Arômes alimentaires). Riche d'une très grande expérience dans la formation, elle est aujourd'hui considérée comme l'école de référence en parfumerie.</span>
+    <span lang="fr"> Crée en 1970 par Jean-Jacques Guerlain sous l'acronyme ISIP (Institut Supérieur International du Parfum), cette école située à Versailles (France) est aujourd'hui connue sous le nom d'ISIPCA (Institut Supérieur International du Parfum, des Cosmétiques et des Arômes alimentaires). Riche d'une très grande expérience dans la formation, elle est aujourd'hui considérée comme l'école de référence en parfumerie.</span>
+    <span lang="en"> </span>
+  </p>
+  <p>
+    <span lang="fr"> L'ISIPCA c'est plus de 3200 m<sup>2</sup> dédiés à la formation d'environ 500 étudiants par an, de BAC +1 à BAC +6. En plus des enseignants attachés à ISIPCA et à ses partenaires, l'école intègre plus de 200 intervenants-experts issus du monde de l'industrie et du service qui travaillent en lien avec les secteurs de la parfumerie, de la cosmétique et de l'aromatique alimentaire. Leur expérience de l'entreprise, conjuguée à un suivi pédagogique rigoureux, permet à ISIPCA de délivrer des diplômes de l'Education nationale (BTS) comme des universités (Licences, Masters) avec, dans tous les cas, des résultats tout à fait remarquables : plus de 95% de réussite aux examens. </span>
     <span lang="en"> </span>
   </p>
 
