--- a/html/supporters/ISIPCA.html
+++ b/html/supporters/ISIPCA.html
@@ -58,8 +58,8 @@ crossorigin=""/>
     </span>
   </p>
   <p>
-    <span lang="fr"> Crée en 1970 par Jean-Jacques Guerlain sous l'acronyme ISIP (Institut Supérieur International du Parfum), cette école située à Versailles (France) est aujourd'hui connue sous le nom d'ISIPCA (Institut Supérieur International du Parfum, des Cosmétiques et des Arômes alimentaires). Riche d'une très grande expérience dans la formation, elle est aujourd'hui considérée comme l'école de référence en parfumerie.</span>
-    <span lang="en"> </span>
+    <span lang="fr"> Crée en 1970 par Jean-Jacques Guerlain sous l'acronyme ISIP (Institut Supérieur International du Parfum), cette école située à Versailles (France) est aujourd'hui connue sous le nom d'ISIPCA (Institut Supérieur International du Parfum, des Cosmétiques et des Arômes alimentaires). <b>Riche d'une très grande expérience dans la formation, elle est aujourd'hui considérée comme l'école de référence en parfumerie.</b></span>
+    <span lang="en"></span>
     <br>
     <span lang="fr">Aujourd'hui, l'ISIPCA c'est plus de 3200 m<sup>2</sup> dédiés à la formation d'environ 500 étudiants par an, de BAC +1 à BAC +6. Les formations proposées sont majoritairement basées sur l'apprentissage. Leur expérience de l'entreprise, conjuguée à un suivi pédagogique rigoureux, permet ainsi à ISIPCA de délivrer des diplômes de l'Education nationale (BTS) comme des universités (Licences, Masters) avec, dans tous les cas, des résultats tout à fait remarquables : plus de 95% de réussite aux examens.</span>
   </p>
