--- a/html/supporters/ISIPCA.html
+++ b/html/supporters/ISIPCA.html
@@ -59,9 +59,10 @@ crossorigin=""/>
   </p>
   <p>
     <span lang="fr"> Crée en 1970 par Jean-Jacques Guerlain sous l'acronyme ISIP (Institut Supérieur International du Parfum), cette école située à Versailles (France) est aujourd'hui connue sous le nom d'ISIPCA (Institut Supérieur International du Parfum, des Cosmétiques et des Arômes alimentaires). <b>Riche d'une très grande expérience dans la formation, elle est aujourd'hui considérée comme l'école de référence en parfumerie.</b></span>
-    <span lang="en"></span>
+    <span lang="en">Created in 1970 by Jean-Jacques Guerlain under the acronym ISIP (Institut Supérieur International du Parfum), this school located in Versailles (France) is today known as ISIPCA (Institut Supérieur International du Parfum, des Cosmétiques et des Arômes alimentaires). <b>With a rich experience in training, it is today considered as the reference school in perfumery.</b></span>
     <br>
     <span lang="fr">Aujourd'hui, l'ISIPCA c'est plus de 3200 m<sup>2</sup> dédiés à la formation d'environ 500 étudiants par an, de BAC +1 à BAC +6. Les formations proposées sont majoritairement basées sur l'apprentissage. Leur expérience de l'entreprise, conjuguée à un suivi pédagogique rigoureux, permet ainsi à ISIPCA de délivrer des diplômes de l'Education nationale (BTS) comme des universités (Licences, Masters) avec, dans tous les cas, des résultats tout à fait remarquables : plus de 95% de réussite aux examens.</span>
+    <span lang="en">Today, ISIPCA is more than 3200 m<sup>2</sup> dedicated to the training of about 500 students per year, from BAC +1 to BAC +6. The training offered is mainly based on apprenticeship. Their experience of the company, combined with a rigorous pedagogical follow-up, allows ISIPCA to deliver diplomas from the National Education (BTS) as well as from universities (Licences, Masters) with, in all cases, quite remarkable results: more than 95% success in exams.</span>
   </p>
   
 
