--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -176,6 +176,16 @@ crossorigin=""/>
 <div class="timeline col-12 mt-4">
     <ul>
       <li>
+      	<div class="content">
+          <h2 id="heading22"><span lang="fr">15 juin 2020</span><span lang="en">15<sup>th</sup> june 2020</span></h2>
+          <p>
+              <span lang="fr">L'ISIPCA devient le premier sponspor de ScenTree ! Merci ! </span>
+              <span lang="en">ISIPCA school became the first sponsor of ScenTree ! Thanks ! </span>
+          </p>
+          <p>
+          	<img src="/home/maxime/img/sponsors/isipca.png">
+          </p>
+        </div>
         <div class="content">
           <h2 id="heading22"><span lang="fr">31 mai 2020</span><span lang="en">31<sup>st</sup> may 2020</span></h2>
           <p>
