--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -183,9 +183,10 @@ crossorigin=""/>
               <span lang="en">ISIPCA school became the first sponsor of ScenTree ! Thanks ! </span>
           </p>
           <p>
-          	<img src="/home/maxime/img/sponsors/isipca.png">
+          	<img src="../img/sponsors/isipca.png">
           </p>
         </div>
+       </li>
         <div class="content">
           <h2 id="heading22"><span lang="fr">31 mai 2020</span><span lang="en">31<sup>st</sup> may 2020</span></h2>
           <p>
