--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -183,7 +183,7 @@ crossorigin=""/>
               <span lang="en">ISIPCA school became the first sponsor of ScenTree ! Thanks ! </span>
           </p>
           <p>
-          	<img src="../img/sponsors/isipca.png">
+          	<img src="../img/sponsors/isipca.png" style="size: 3em;">
           </p>
         </div>
        </li>
