--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -183,7 +183,9 @@ crossorigin=""/>
               <span lang="en">ISIPCA school became the first sponsor of ScenTree ! Thanks ! </span>
           </p>
           <p>
-          	<img src="../img/sponsors/isipca.png" style="size: 1em;">
+          	<a class="btn col-4 logostandards" role="button" href="../supporters/ISIPCA.html">
+            <img class="img-fluid boutonclickable" src="../img/sponsors/isipca.png" alt="le logo d'ISIPCA'">
+          </a>
           </p>
         </div>
        </li>
