--- a/html/supporters/ISIPCA.html
+++ b/html/supporters/ISIPCA.html
@@ -12,7 +12,7 @@
 <title lang="fr">ScenTree - ISIPCA</title>
 <title lang="en">ScenTree - ISIPCA</title>
 <!--Description Google-->
-<meta name="description" content="Découvrez qui est Cinquième Sens Co-working, le partenaire de ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
+<meta name="description" content="Découvrez qui est l'ISIPCA, le partenaire de ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
