--- a/html/supporters/Quosentis.html
+++ b/html/supporters/Quosentis.html
@@ -59,7 +59,15 @@ crossorigin=""/>
   <p style="text-transform: uppercase; font-size: 1em;">
     <b>This company also commercialize : </b><br>(ici je n'ai pas codé la liste du devis, attendez-vous à un lien vers toutes les autres MP que vous sponsorisez chez ScenTree) 
     <ul>
-      <li><a href="voila">INGREDIENT A</a></li>
+      <li>
+        <h4>
+          <a class="interpop" href="../ingredients/Isoraldeine_70®__Isoraldéine_70®.html" target="_BLANK">
+          <span lang="fr">Isométhyl Ionone-Alpha</span>
+          <span lang="en">Isomethyl Ionone-Alpha</span>
+          </a>
+        </h4>
+      </li>
+      
       <li><a href="voila">INGREDIENT B</a></li>
       <li><a href="voila">INGREDIENT C</a></li>
       <li><a href="voila">INGREDIENT D ...</a></li>
