--- a/html/supporters/Quosentis.html
+++ b/html/supporters/Quosentis.html
@@ -49,15 +49,15 @@ crossorigin=""/>
   <p style="font-size: 1em;">
     <b>CONTACT :</b>  Julie ROCHON
     <br>
-    <b>MAIL :</b>  <a HREF="mailto:san@antonio.net">contact@quosentis.com</a>
+    <b>MAIL :</b>  <a HREF="mailto:contact@quosentis.com">contact@quosentis.com</a>
     <br>
-    <b>WEBSITE :</b> <a href="www.quosentis.com" target="_blank">www.quosentis.com</a>
+    <b>WEBSITE :</b> <a href="https://www.quosentis.com" target="_blank">www.quosentis.com</a>
   </p>
-  <p style="text-transform: uppercase; font-size: 1.2em;">
-    This space is dedicated to you. It means that you will be able to highlight all the information that <u>YOU</u> wants to give to our users (history, philosophy, values, marketing, etc.). This presentation is totally free.<br>
+  <p style="font-size: 1.2em;">
+    Insert text here
   </p>
   <p style="text-transform: uppercase; font-size: 1em;">
-    <b>This company also commercialize : </b><br>(ici je n'ai pas codé la liste du devis, attendez-vous à un lien vers toutes les autres MP que vous sponsorisez chez ScenTree) 
+    <b>This company also commercialize : </b>
     <ul>
       <li>
         <h4>
@@ -67,7 +67,7 @@ crossorigin=""/>
           </a>
         </h4>
       </li>
-      
+
       <li><a href="voila">INGREDIENT B</a></li>
       <li><a href="voila">INGREDIENT C</a></li>
       <li><a href="voila">INGREDIENT D ...</a></li>
