--- a/html/supporters/Quosentis.html
+++ b/html/supporters/Quosentis.html
@@ -61,9 +61,9 @@ crossorigin=""/>
     <ul>
       <li>
         <h4>
-          <a class="interpop" href="../ingredients/Isoraldeine_70®__Isoraldéine_70®.html" target="_BLANK">
-          <span lang="fr">Isométhyl Ionone-Alpha</span>
-          <span lang="en">Isomethyl Ionone-Alpha</span>
+          <a class="interpop" href="../ingredients/Hedione®__Hédione®.html" target="_BLANK">
+          <span lang="fr">Hédione® (N°Cas : 24851-98-7)</span>
+          <span lang="en">Hedione® (N°Cas : 24851-98-7)</span>
           </a>
         </h4>
       </li>
